[project]
name = "panna"
version = "0.0.1"
description = "A Playground for Approximate Nearest Neighbors Algorithms"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Matteo Ceccarello", email = "matteo.ceccarello@unipd.it" },
]
classifiers = []

[project.urls]
Homepage = "https://github.com/Cecca/panna"

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
